--- a/Stuffa/Stuffa/MainWindow.xaml
+++ b/Stuffa/Stuffa/MainWindow.xaml
@@ -1,12 +1,16 @@
-﻿<Window x:Class="WpfApp1.MainWindow"
+﻿<Window x:Class="WpfApp2.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfApp1"
+        xmlns:local="clr-namespace:WpfApp2"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
+        Title="MainWindow" Height="450" Width="525">
+    <Grid Margin="0,0,0.4,-0.2">
+        <ListBox x:Name="list" HorizontalAlignment="Left" Height="158" Margin="78,60,0,0" VerticalAlignment="Top" Width="215" SelectionChanged="ListBox_SelectionChanged"/>
+        <TextBlock x:Name="text" HorizontalAlignment="Left" Margin="78,223,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="215" Height="78"/>
+        <MediaElement x:Name="player"   LoadedBehavior="Manual" HorizontalAlignment="Left" Height="158" Margin="360,60,0,0" VerticalAlignment="Top" Width="102"/>
+        <Button Content="play/pause" HorizontalAlignment="Left" Margin="374,124,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+
     </Grid>
 </Window>
