--- a/Stuffa/App.xaml
+++ b/Stuffa/App.xaml
@@ -1,9 +1,9 @@
-﻿<Application x:Class="Stuffa.App"
+﻿<Application x:Class="WpfApp2.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Stuffa"
+             xmlns:local="clr-namespace:WpfApp2"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+
     </Application.Resources>
 </Application>
