--- a/Stuffa/MainWindow.xaml
+++ b/Stuffa/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WpfApp2.MainWindow"
+﻿<Window x:Class="Stuffa.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -11,6 +11,16 @@
         <TextBlock x:Name="text" HorizontalAlignment="Left" Margin="78,223,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="215" Height="78"/>
         <MediaElement x:Name="player"   LoadedBehavior="Manual" HorizontalAlignment="Left" Height="158" Margin="360,60,0,0" VerticalAlignment="Top" Width="102"/>
         <Button Content="play/pause" HorizontalAlignment="Left" Margin="374,124,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <Slider x:Name="progresBar" HorizontalAlignment="Left" Margin="44,336,0,0" VerticalAlignment="Top" Height="9" RenderTransformOrigin="0.5,0.5" Width="442">
+            <Slider.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleY="-1"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Slider.RenderTransform>
+        </Slider>
 
     </Grid>
 </Window>
