--- a/Stuffa/MainWindow.xaml
+++ b/Stuffa/MainWindow.xaml
@@ -44,6 +44,8 @@
         <Button x:Name="save" Content="save" HorizontalAlignment="Left" Margin="537,124,0,0" VerticalAlignment="Top" Width="75" Click="save_Click"/>
         <Button x:Name="load" Content="load" HorizontalAlignment="Left" Margin="537,148,0,0" VerticalAlignment="Top" Width="75" Click="load_Click"/>
         <ListBox x:Name="rightClick" Visibility="Hidden" SelectionChanged="RightClickBoxHandler" HorizontalAlignment="Left" Height="100" Margin="640,379,0,0" VerticalAlignment="Top" Width="100"/>
+        <TextBox x:Name="searchField" HorizontalAlignment="Left" Height="23" Margin="93,379,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="search" Content="search" HorizontalAlignment="Left" Margin="218,383,0,0" VerticalAlignment="Top" Width="75" Click="searchButton"/>
 
     </Grid>
 </Window>
