--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -46,6 +46,8 @@
         <ListBox x:Name="rightClick" Visibility="Hidden" SelectionChanged="RightClickBoxHandler" HorizontalAlignment="Left" Height="100" Margin="640,379,0,0" VerticalAlignment="Top" Width="100"/>
         <TextBox x:Name="searchFieldBPM" HorizontalAlignment="Left" Height="23" Margin="93,379,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
         <Button x:Name="searchBPM" Content="search BPM" HorizontalAlignment="Left" Margin="218,383,0,0" VerticalAlignment="Top" Width="75" Click="searchBPMButton"/>
+        <TextBox x:Name="searchFieldTitle"  HorizontalAlignment="Left" Height="23" Margin="93,349,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="searchTitles" Content="search Titles" HorizontalAlignment="Left" Margin="218,350,0,0" VerticalAlignment="Top" Width="75" Click="searchTitlesButton"/>
 
     </Grid>
 </Window>
