--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,15 +5,23 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp2"
         mc:Ignorable="d"
-        Title="MainWindow">
+        Title="MainWindow"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+        TextElement.FontWeight="Regular"
+        TextElement.FontSize="13"
+        TextOptions.TextFormattingMode="Ideal" 
+        TextOptions.TextRenderingMode="Auto"        
+        Background="{DynamicResource MaterialDesignPaper}"
+        FontFamily="{DynamicResource MaterialDesignFont}">
     <Grid Margin="0,0,0.4,-0.2">
-        <ListBox x:Name="list" MouseDoubleClick="ListBox_MouseDoubleClick" MouseLeftButtonUp="ListBox_mouseLeft"  MouseRightButtonUp="ListBox_mouseRight"  HorizontalAlignment="Left" Height="158" Margin="78,60,0,0" VerticalAlignment="Top"  SelectionChanged="ListBox_SelectionChanged"/>
-        <TextBlock x:Name="text" HorizontalAlignment="Left" Margin="78,223,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="78"><InlineUIContainer>
+        <ListBox x:Name="list" MouseDoubleClick="ListBox_MouseDoubleClick" MouseLeftButtonUp="ListBox_mouseLeft"  MouseRightButtonUp="ListBox_mouseRight"  HorizontalAlignment="Left" Height="209.161" VerticalAlignment="Top"  SelectionChanged="ListBox_SelectionChanged" Width="270.169" Margin="0,48,0,0"/>
+        <TextBlock x:Name="text" HorizontalAlignment="Left" Margin="93,315,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="29"><InlineUIContainer>
                 <TextBox x:Name="textBox1" Height="23" TextWrapping="Wrap" Text="TextBox" Width="120"/>
             </InlineUIContainer></TextBlock>
-        <MediaElement  x:Name="player"   LoadedBehavior="Manual" HorizontalAlignment="Left" Height="158" Margin="415,207,0,0" VerticalAlignment="Top" Width="102"/>
-        <Button Content="play/pause" HorizontalAlignment="Left" Margin="374,124,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
-        <Slider x:Name="progresBar" Margin="43,402,398.2,0" VerticalAlignment="Top" Height="25" RenderTransformOrigin="0.5,0.5" ValueChanged="progresBar_ValueChanged">
+        <MediaElement  x:Name="player"   LoadedBehavior="Manual" HorizontalAlignment="Left" Height="158" Margin="659.2,340,0,0" VerticalAlignment="Top" Width="102" MediaOpened="mediaOpen"/>
+        <Button Content="play/pause" HorizontalAlignment="Left" Margin="374,124,0,0" VerticalAlignment="Top" Width="115" Click="Button_Click"/>
+        <Slider x:Name="slider" Margin="54.694,444.391,386.506,0" VerticalAlignment="Top" Height="25" RenderTransformOrigin="0.5,0.5" ValueChanged="slider_ValueChanged">
             <Slider.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleY="-1"/>
@@ -24,8 +32,8 @@
             </Slider.RenderTransform>
         </Slider>
         <DockPanel HorizontalAlignment="Stretch" Height="20" LastChildFill="False" VerticalAlignment="Top">
-            <Menu DockPanel.Dock="Top">
-                <MenuItem Header="_File" Click="MenuItem_Click">
+            <Menu DockPanel.Dock="Top" Height="27.844" Margin="0,0,-0.4,0" Background="#FF181818">
+                <MenuItem Header="_File&#xA;" Click="MenuItem_Click" Width="178" Height="27.844">
                     <MenuItem Header="_New playlist"  Margin="0,0,-0.2,0">
                         <TextBox x:Name="playlistName" Height="23" TextWrapping="Wrap" Text="NoName" Width="112"/>
                         <Button  x:Name="newPlaylistButton" Content="create" Click="newPlaylist" />
@@ -40,14 +48,14 @@
 
         </DockPanel>
         <TextBox x:Name="curPlaylistBox" HorizontalAlignment="Left" Height="23" Margin="78,25,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
-        <Label x:Name="label" Content="Tid: " HorizontalAlignment="Left" Margin="361,403,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="save" Content="save" HorizontalAlignment="Left" Margin="537,124,0,0" VerticalAlignment="Top" Width="75" Click="save_Click"/>
-        <Button x:Name="load" Content="load" HorizontalAlignment="Left" Margin="537,148,0,0" VerticalAlignment="Top" Width="75" Click="load_Click"/>
+        <Label x:Name="durationLabel" Content="Time" HorizontalAlignment="Left" Margin="361,390,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.109,1.07"/>
         <ListBox x:Name="rightClick" Visibility="Hidden" SelectionChanged="RightClickBoxHandler" HorizontalAlignment="Left" Height="100" Margin="640,379,0,0" VerticalAlignment="Top" Width="100"/>
         <TextBox x:Name="searchFieldBPM" HorizontalAlignment="Left" Height="23" Margin="93,379,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="searchBPM" Content="search BPM" HorizontalAlignment="Left" Margin="218,383,0,0" VerticalAlignment="Top" Width="75" Click="searchBPMButton"/>
+        <Button x:Name="searchBPM" Content="search BPM" HorizontalAlignment="Left" Margin="218,374,0,0" VerticalAlignment="Top" Width="75" Click="searchBPMButton"/>
         <TextBox x:Name="searchFieldTitle"  HorizontalAlignment="Left" Height="23" Margin="93,349,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="searchTitles" Content="search Titles" HorizontalAlignment="Left" Margin="218,350,0,0" VerticalAlignment="Top" Width="75" Click="searchTitlesButton"/>
+        <Button x:Name="searchTitles" Content="search Titles" HorizontalAlignment="Left" Margin="218,340,0,0" VerticalAlignment="Top" Width="75" Click="searchTitlesButton"/>
+        <Label x:Name="trackTime" Content="aTime" HorizontalAlignment="Left" Margin="0,403,0,0" VerticalAlignment="Top"/>
+        <Image x:Name="playButton" HorizontalAlignment="Left" Height="48" Margin="0,433.6,0,0" VerticalAlignment="Top" Width="48" Source="play-circle-outline.png" MouseDown="PlayButton_MouseDown"/>
 
     </Grid>
 </Window>
