--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -14,14 +14,14 @@
         TextOptions.TextRenderingMode="Auto"        
         Background="{DynamicResource MaterialDesignPaper}"
         FontFamily="{DynamicResource MaterialDesignFont}">
-    <Grid Margin="0,0,0.4,-0.2">
-        <ListBox x:Name="list" MouseDoubleClick="ListBox_MouseDoubleClick" MouseLeftButtonUp="ListBox_mouseLeft"  MouseRightButtonUp="ListBox_mouseRight"  HorizontalAlignment="Left" Height="209.161" VerticalAlignment="Top"  SelectionChanged="ListBox_SelectionChanged" Width="270.169" Margin="0,48,0,0"/>
-        <TextBlock x:Name="text" HorizontalAlignment="Left" Margin="93,315,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="29"><InlineUIContainer>
-                <TextBox x:Name="textBox1" Height="23" TextWrapping="Wrap" Text="TextBox" Width="120"/>
-            </InlineUIContainer></TextBlock>
-        <MediaElement  x:Name="player"   LoadedBehavior="Manual" HorizontalAlignment="Left" Height="158" Margin="659.2,340,0,0" VerticalAlignment="Top" Width="102" MediaOpened="mediaOpen"/>
-        <Button Content="play/pause" HorizontalAlignment="Left" Margin="374,124,0,0" VerticalAlignment="Top" Width="115" Click="Button_Click"/>
-        <Slider x:Name="slider" Margin="54.694,444.391,386.506,0" VerticalAlignment="Top" Height="25" RenderTransformOrigin="0.5,0.5" ValueChanged="slider_ValueChanged">
+    <Grid Margin="0,0,0.4,-0.2" AutomationProperties.ItemType="button" AutomationProperties.Name="NewPlaylist">
+        <ListBox x:Name="list" MouseDoubleClick="ListBox_MouseDoubleClick" MouseLeftButtonUp="ListBox_mouseLeft"  MouseRightButtonUp="ListBox_mouseRight"  HorizontalAlignment="Left" Height="295" VerticalAlignment="Top"  SelectionChanged="ListBox_SelectionChanged" Width="145.369" Margin="0,20,0,0">
+            <ListBoxItem Content="Playlists" Height="267.6" Width="152.769" RenderTransformOrigin="0.135,0.398"/>
+        </ListBox>
+        <TextBlock x:Name="text" HorizontalAlignment="Left" Margin="93,315,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="29"/>
+        <MediaElement  x:Name="player"   LoadedBehavior="Manual" HorizontalAlignment="Left" Height="116.6" Margin="10,379,0,0" VerticalAlignment="Top" Width="118.4" MediaOpened="mediaOpen" RenderTransformOrigin="-1.088,-0.127"/>
+        <Button Content="play/pause" HorizontalAlignment="Left" Margin="162,410.6,0,0" VerticalAlignment="Top" Width="115" Click="Button_Click"/>
+        <Slider x:Name="slider" Margin="291.494,459.591,50.506,0" VerticalAlignment="Top" Height="25" RenderTransformOrigin="0.5,0.5" ValueChanged="slider_ValueChanged">
             <Slider.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleY="-1"/>
@@ -48,14 +48,15 @@
 
         </DockPanel>
         <TextBox x:Name="curPlaylistBox" HorizontalAlignment="Left" Height="23" Margin="78,25,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
-        <Label x:Name="durationLabel" Content="Time" HorizontalAlignment="Left" Margin="361,390,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.109,1.07"/>
+        <Label x:Name="durationLabel" Content="Time" HorizontalAlignment="Left" Margin="713.243,462.3,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.109,1.07"/>
         <ListBox x:Name="rightClick" Visibility="Hidden" SelectionChanged="RightClickBoxHandler" HorizontalAlignment="Left" Height="100" Margin="640,379,0,0" VerticalAlignment="Top" Width="100"/>
-        <TextBox x:Name="searchFieldBPM" HorizontalAlignment="Left" Height="23" Margin="93,379,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="searchBPM" Content="search BPM" HorizontalAlignment="Left" Margin="218,374,0,0" VerticalAlignment="Top" Width="75" Click="searchBPMButton"/>
-        <TextBox x:Name="searchFieldTitle"  HorizontalAlignment="Left" Height="23" Margin="93,349,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="searchTitles" Content="search Titles" HorizontalAlignment="Left" Margin="218,340,0,0" VerticalAlignment="Top" Width="75" Click="searchTitlesButton"/>
-        <Label x:Name="trackTime" Content="aTime" HorizontalAlignment="Left" Margin="0,403,0,0" VerticalAlignment="Top"/>
-        <Image x:Name="playButton" HorizontalAlignment="Left" Height="48" Margin="0,433.6,0,0" VerticalAlignment="Top" Width="48" Source="play-circle-outline.png" MouseDown="PlayButton_MouseDown"/>
+        <TextBox x:Name="searchFieldBPM" HorizontalAlignment="Left" Height="23" Margin="297,231.8,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="searchBPM" Content="search BPM" HorizontalAlignment="Left" Margin="340.4,374.5,0,0" VerticalAlignment="Top" Width="75" Click="searchBPMButton"/>
+        <TextBox x:Name="searchFieldTitle"  HorizontalAlignment="Left" Height="23" Margin="297,259.8,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.5,0.409"/>
+        <Button x:Name="searchTitles" Content="search Titles" HorizontalAlignment="Left" Margin="340.4,337.5,0,0" VerticalAlignment="Top" Width="75" Click="searchTitlesButton"/>
+        <Label x:Name="trackTime" Content="aTime" HorizontalAlignment="Left" Margin="245.369,462.3,0,0" VerticalAlignment="Top"/>
+        <Image x:Name="playButton" HorizontalAlignment="Left" Height="48" Margin="197.369,447.6,0,0" VerticalAlignment="Top" Width="48" Source="play-circle-outline.png" MouseDown="PlayButton_MouseDown" RenderTransformOrigin="-0.074,0.508"/>
+        <TextBox x:Name="textBox1" TextWrapping="Wrap" Text="TextBox" Margin="297,287.8,344.2,194.8"/>
 
     </Grid>
 </Window>
