--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -12,7 +12,10 @@
         TextElement.FontWeight="Medium"
         TextElement.FontSize="48"
         FontSize="16"
-        FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#RobotoLight" MinWidth="900" MinHeight="600" MaxWidth="2560" MaxHeight="1440" HorizontalContentAlignment="Center">
+        FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#RobotoLight" MinWidth="900" MinHeight="600" MaxWidth="2560" MaxHeight="1440" HorizontalContentAlignment="Center"
+        >
+    
+    
     <WindowChrome.WindowChrome>
         <WindowChrome
             ResizeBorderThickness="5"
@@ -21,6 +24,7 @@
             CornerRadius="25">
         </WindowChrome>
     </WindowChrome.WindowChrome>
+    
 
     <Grid x:Name="grid1">
         <Grid HorizontalAlignment="Right" Height="30" VerticalAlignment="Top" Width="100" Background="#FF1F1F1F" MinWidth="100" MinHeight="30">
@@ -29,9 +33,9 @@
                 <ColumnDefinition/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <Image x:Name="closeButton" Grid.Column="2" Height="30" VerticalAlignment="Top" Source="close.png.png" MouseUp="closeUp" MouseEnter="closeEnter" MouseLeave="closeLeave" MouseDown="closeDown"/>
-            <Image x:Name="maximizeButton" Grid.Column="1" Height="30" VerticalAlignment="Top" Source="ic_open_in_new_white_48dp.png" MouseUp="maximizeUp" MouseDown="maximizeDown" MouseEnter="maximizeEnter" MouseLeave="maximizeLeave" Opacity="0.495"/>
-            <Image x:Name="minimizeButton" Grid.Column="0" Height="30" VerticalAlignment="Top" Source="ic_remove_white_48dp.png" MouseUp="minimizeUp" Opacity="0.5" MouseEnter="minimizeEnter" MouseDown="minimizeDown" MouseLeave="minimizeLeave"/>
+            <Image x:Name="closeButton" Grid.Column="2" Height="30" VerticalAlignment="Top" Source="img/close.png.png" MouseUp="closeUp" MouseEnter="closeEnter" MouseLeave="closeLeave" MouseDown="closeDown"/>
+            <Image x:Name="maximizeButton" Grid.Column="1" Height="30" VerticalAlignment="Top" Source="img/ic_open_in_new_white_48dp.png" MouseUp="maximizeUp" MouseDown="maximizeDown" MouseEnter="maximizeEnter" MouseLeave="maximizeLeave" Opacity="0.495"/>
+            <Image x:Name="minimizeButton" Grid.Column="0" Height="30" VerticalAlignment="Top" Source="img/ic_remove_white_48dp.png" MouseUp="minimizeUp" Opacity="0.5" MouseEnter="minimizeEnter" MouseDown="minimizeDown" MouseLeave="minimizeLeave"/>
         </Grid>
         <Frame x:Name="ContainerView" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" NavigationUIVisibility="Hidden"></Frame>
     </Grid>
