--- a/pages/PlayerControl.xaml
+++ b/pages/PlayerControl.xaml
@@ -149,7 +149,7 @@
             <Label x:Name="SongDurationLabel" Content="0:00" HorizontalAlignment="Right" Margin="0,0,10,38.59" FontWeight="Normal" Width="38.517" HorizontalContentAlignment="Right" VerticalContentAlignment="Bottom" Opacity="0.8"/>
             <Label x:Name="SongCurrentTime" Content="0:00" HorizontalAlignment="Left" Margin="10,0,0,38.59" FontWeight="Normal" Width="45.184" VerticalContentAlignment="Bottom" Opacity="0.8"/>
         </Grid>
-        <MediaElement x:Name="Player" HorizontalAlignment="Left" Height="80" Margin="10,10,0,0" VerticalAlignment="Top" Width="80" ScrubbingEnabled="True" MediaOpened="Player_MediaOpened" Volume="0.7"/>
+        <MediaElement x:Name="Player" HorizontalAlignment="Left" Height="80" Margin="10,10,0,0" VerticalAlignment="Top" Width="80" ScrubbingEnabled="True" MediaOpened="Player_MediaOpened" Volume="0.7" LoadedBehavior="Manual"/>
         <Image x:Name="AlbumArt" Margin="10,10,183,10" Source="WayBackVicetone.jpg" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Slider x:Name="VolumeSlider" Grid.Column="2" HorizontalAlignment="Left" Margin="86,35.45,0,0" VerticalAlignment="Top" Width="100" ValueChanged="VolumeSlider_ValueChanged" Maximum="1" Value="0.7" Opacity="0.8" LargeChange="0.1" SmallChange="0.01" TickFrequency="0.01"/>
     </Grid>
