--- a/pages/PlayerControl.xaml
+++ b/pages/PlayerControl.xaml
@@ -13,8 +13,8 @@
             <ColumnDefinition Width="118*"/>
             <ColumnDefinition Width="91*"/>
         </Grid.ColumnDefinitions>
-        <Label x:Name="ArtistLabel" Content="Vicetone" Margin="0,35.45,103,38.688" VerticalAlignment="Center" FontWeight="Normal" Height="25.862" HorizontalAlignment="Right" Width="69.952" Opacity="0.8" ToolTip="Artist"/>
-        <Label x:Name="BpmLabel" Content="132" HorizontalAlignment="Right" Margin="0,0,77.852,10" VerticalAlignment="Bottom" Width="95.1" FontSize="20" Height="35.138" ToolTip="Beats Per Minute"/>
+        <Label x:Name="ArtistLabel" Content="Vicetone" Margin="100.048,35.5,0,38.638" VerticalAlignment="Center" FontWeight="Normal" Height="25.862" HorizontalAlignment="Left" Width="69.952" Opacity="0.8" ToolTip="Artist"/>
+        <Label x:Name="BpmLabel" Content="132" HorizontalAlignment="Left" Margin="100.048,0,0,10" VerticalAlignment="Bottom" Width="95.1" FontSize="20" Height="35.138" ToolTip="Beats Per Minute"/>
         <ScrollViewer x:Name="TitleScrollView" Margin="104.736,10,0,54.55" ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden" HorizontalAlignment="Left" Width="118" ToolTip="Title">
             <TextBlock x:Name="TitleLabel" FontWeight="Bold" FontSize="18" Foreground="White" Padding="0">
         Way Back (feat. Cozi Zuehlsdorff)
