--- a/pages/Container.xaml
+++ b/pages/Container.xaml
@@ -19,11 +19,13 @@
             <ColumnDefinition/>
             <ColumnDefinition Width="4*"/>
         </Grid.ColumnDefinitions>
-        <Frame x:Name="DynamicView" Grid.Column="1" NavigationUIVisibility="Hidden"/>
+        <materialDesign:TransitioningContent OpeningEffect="{materialDesign:TransitionEffect ExpandIn}" OpeningEffectsOffset="{materialDesign:IndexedItemOffsetMultiplier 0:0:5}" Foreground="White" FontSize="52" Width="715" Grid.Column="1" Margin="5,0,0,0" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch">
+            <Frame x:Name="DynamicView" Grid.Column="1" NavigationUIVisibility="Hidden"/>
+        </materialDesign:TransitioningContent>
         <Frame x:Name="PlaylistView" NavigationUIVisibility="Hidden"/>
-
         <Frame x:Name="playerControl" Grid.ColumnSpan="2" VerticalAlignment="Bottom" MinHeight="100" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" BorderBrush="#FF01AA28" MinWidth="900" Grid.Row="1" NavigationUIVisibility="Hidden"/>
-        <Image x:Name="settignsButton"  Source="../img/settings-white.png" Grid.Column="1" Margin="0,0,10,25" Width="40" Height="40" MouseUp="settingsButtonUp" RenderTransformOrigin="0.5,0.5" VerticalAlignment="Bottom" HorizontalAlignment="Right" Grid.Row="1" RenderOptions.BitmapScalingMode="NearestNeighbor">
+
+        <Image x:Name="settignsButton"  Source="../img/settings-white.png" Grid.Column="1" Margin="0,0,10,25" Width="48" Height="48" MouseUp="settingsButtonUp" RenderTransformOrigin="0.5,0.5" VerticalAlignment="Bottom" HorizontalAlignment="Right" Grid.Row="1" UseLayoutRounding="True" ClipToBounds="True" SnapsToDevicePixels="True" RenderOptions.BitmapScalingMode="NearestNeighbor">
             <Image.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -32,9 +34,6 @@
                     <TranslateTransform/>
                 </TransformGroup>
             </Image.RenderTransform>
-            <Image.Effect>
-                <DropShadowEffect BlurRadius="48" Direction="-96"/>
-            </Image.Effect>
             <Image.Triggers>
                 <EventTrigger RoutedEvent="UIElement.MouseEnter">
                     <BeginStoryboard>
@@ -47,6 +46,5 @@
             </Image.Triggers>
         </Image>
         <materialDesign:Snackbar x:Name="SnackBarDialog" MessageQueue="{materialDesign:MessageQueue}" Height="51" Margin="0,0,180,0" Grid.Row="1" HorizontalAlignment="Stretch" Grid.Column="1" Width="420" VerticalContentAlignment="Bottom" HorizontalContentAlignment="Center" Background="#FFD32F2F" Foreground="White" />
-        <!--Source="/WpfApp2;component/PlayerControl.xaml"-->
     </Grid>
 </Page>
