--- a/pages/EditView.xaml
+++ b/pages/EditView.xaml
@@ -89,11 +89,11 @@
                 <Image Source="../img/settings-white.png" HorizontalAlignment="Center" VerticalAlignment="Center" Width="39"/>
             </StackPanel>
         </Button>-->
-        <Label Content="No Playlist Loaded" HorizontalAlignment="Center" Margin="61.088,5,51.088,0" VerticalAlignment="Top" FontSize="24" HorizontalContentAlignment="Center" FontFamily="Roboto Light" FontWeight="Normal" Height="42.5" Width="241.824"/>
+        <Label x:Name="PlaylistName"  Content="No Playlist Loaded" HorizontalAlignment="Center" Margin="61.088,5,51.088,0" VerticalAlignment="Top" FontSize="24" HorizontalContentAlignment="Center" FontFamily="Roboto Light" FontWeight="Normal" Height="42.5" Width="241.824"/>
         <Grid Margin="15,47.5,5,0" VerticalAlignment="Top">
             <Label Content="BPM" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top" Opacity="0.795" Width="43.377" HorizontalContentAlignment="Center" FontSize="14"/>
-            <Label Content="Artist" HorizontalAlignment="Left" Margin="51.127,10,0,0" VerticalAlignment="Top" Opacity="0.795" FontSize="14"/>
-            <Label Content="Album" Margin="175.11,10,88.708,0" VerticalAlignment="Top" Opacity="0.795" HorizontalContentAlignment="Center" FontSize="14"/>
+            <Label Content="Title" HorizontalAlignment="Left" Margin="51.127,10,0,0" VerticalAlignment="Top" Opacity="0.795" FontSize="14"/>
+            <Label Content="Artist" Margin="170.11,10,93.708,0" VerticalAlignment="Top" Opacity="0.795" HorizontalContentAlignment="Center" FontSize="14"/>
             <Border BorderBrush="#FF191919" BorderThickness="5" Height="1" Margin="1.25,39,5.75,-0.5" VerticalAlignment="Top">
                 <Border.Effect>
                     <BlurEffect/>
