--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -29,32 +29,41 @@
 
     <Grid x:Name="grid1">
 
-        <Frame x:Name="ContainerView" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" NavigationUIVisibility="Hidden"></Frame>
-        <Grid HorizontalAlignment="Stretch" Height="30" VerticalAlignment="Top"   Background="Transparent" MinWidth="800" MinHeight="30">
+        <Grid HorizontalAlignment="Stretch"  VerticalAlignment="top" Background="Transparent" MinWidth="800" MinHeight="600" Height="600">
+
+
+            <Grid.RowDefinitions>
+                <RowDefinition MinHeight="30"></RowDefinition>
+
+                <RowDefinition MinHeight="570"></RowDefinition>
+
+            </Grid.RowDefinitions>
+
+            <Frame x:Name="ContainerView" Grid.Row="1" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" NavigationUIVisibility="Hidden"></Frame>
+
+        </Grid>
+        
+        <Grid HorizontalAlignment="Stretch"  VerticalAlignment="top" Background="#FF1F1F1F" MinWidth="800" MinHeight="30" Height="30">
+
+
             <Grid.ColumnDefinitions>
 
                 <ColumnDefinition MinWidth="800"/>
-                <ColumnDefinition Width="100"/>
-
-
+                <ColumnDefinition Width="33.33"/>
+                <ColumnDefinition Width="33.33"/>
+                <ColumnDefinition Width="33.33"/>
 
             </Grid.ColumnDefinitions>
             <Rectangle Fill="Transparent" Grid.Column="0" VerticalAlignment="Top" HorizontalAlignment="Stretch" Height="30" Stroke="Transparent" MinWidth="800" MouseDown="dragWindow"/>
+            <Image x:Name="closeButton" Grid.Column="3" Height="30" VerticalAlignment="Top" Source="img/close.png.png" MouseUp="closeUp" MouseEnter="closeEnter" MouseLeave="closeLeave" MouseDown="closeDown"/>
+            <Image x:Name="maximizeButton" Grid.Column="2" Height="30" VerticalAlignment="Top" Source="img/ic_open_in_new_white_48dp.png" MouseUp="maximizeUp" MouseDown="maximizeDown" MouseEnter="maximizeEnter" MouseLeave="maximizeLeave" Opacity="0.495"/>
+            <Image x:Name="minimizeButton" Grid.Column="1" Height="30" VerticalAlignment="Top" Source="img/ic_remove_white_48dp.png" MouseUp="minimizeUp" Opacity="0.5" MouseEnter="minimizeEnter" MouseDown="minimizeDown" MouseLeave="minimizeLeave"/>
+
 
         </Grid>
+        
 
-        <Grid HorizontalAlignment="Right" Height="30" VerticalAlignment="Top" Width="100" Background="#FF1F1F1F" MinWidth="100" MinHeight="30">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
 
-            </Grid.ColumnDefinitions>
-            <Image x:Name="closeButton" Grid.Column="2" Height="30" VerticalAlignment="Top" Source="img/close.png.png" MouseUp="closeUp" MouseEnter="closeEnter" MouseLeave="closeLeave" MouseDown="closeDown"/>
-            <Image x:Name="maximizeButton" Grid.Column="1" Height="30" VerticalAlignment="Top" Source="img/ic_open_in_new_white_48dp.png" MouseUp="maximizeUp" MouseDown="maximizeDown" MouseEnter="maximizeEnter" MouseLeave="maximizeLeave" Opacity="0.495"/>
-            <Image x:Name="minimizeButton" Grid.Column="0" Height="30" VerticalAlignment="Top" Source="img/ic_remove_white_48dp.png" MouseUp="minimizeUp" Opacity="0.5" MouseEnter="minimizeEnter" MouseDown="minimizeDown" MouseLeave="minimizeLeave"/>
-
-        </Grid>
         
     </Grid>
 </Window>
